# phasecal

./: README.md  debug_signal_levels.grc  pcal_get_delay.py  pcal_rec.py
digital_rf/.svn/: wc.db
digital_rf/branches/digital_rf_2.0/: Makefile.am  configure.ac  setup.py
digital_rf/branches/digital_rf_2.0/source/: MANIFEST.in  digital_metadata.py  example_digital_rf_hdf5.py  rf_write_hdf5.c  setup.py  test_millstone_data_access.py
digital_rf/branches/digital_rf_2.0/source/.deps/: benchmark_rf_write_hdf5.Po  rf_write_hdf5.Plo
digital_rf/branches/digital_rf_2.0/source/matlab/: DigitalRFReader.m  drf_channel.m  testDigitalRFReader.m
digital_rf/branches/digital_rf_2.0/testing/: benchmark_rf_write_hdf5.py  test_write_digital_metadata.py
digital_rf/branches/digital_rf_2.0/tools/: create_metadata_top_level_file.py  drf_plot.py  plot_daily_sys_temp.py
digital_rf/releases/Release_1.0/: Makefile.am  README  configure.ac  setup.py
digital_rf/releases/Release_1.0/source/: Makefile  Makefile.am  Makefile.manual  _py_rf_write_hdf5.c  benchmark_rf_write_hdf5.c  benchmark_rf_write_hdf5.py  digital_rf_hdf5.py  metadata@1400792174.001.h5  rf_write_hdf5.c  test_rf_write_hdf5.c
digital_rf/releases/Release_1.0/testing/: test_digital_rf_hdf5.py
digital_rf/releases/Release_1.1/: MANIFEST.in  configure.ac
digital_rf/releases/Release_1.1.1/: MANIFEST.in  configure.ac  setup.py
digital_rf/releases/Release_1.1.1/source/: Makefile.manual  configure.ac  digital_rf.h  digital_rf_hdf5.py  rf_write_hdf5.c  rf_write_hdf5.h  setup.py  test_rf_write_hdf5.c
digital_rf/releases/Release_1.1.1/testing/: benchmark_rf_read_hdf5.py  regression_test_digital_rf_hdf5.py  test_digital_rf_hdf5.py  test_digital_rf_realtime.py  test_digital_rf_realtime_2.py
digital_rf/releases/Release_1.1.2/: configure.ac
digital_rf/releases/Release_1.1.2/source/: MANIFEST.in  Makefile  benchmark_rf_read_hdf5.py  digital_rf.h  digital_rf_hdf5.py  metadata@1400792174.000.h5  py_rf_write_hdf5.py  rf_write_hdf5.c  test_digital_rf_hdf5.py
digital_rf/releases/Release_1.1.2/testing/: benchmark_rf_read_hdf5.py  hourly_subdir_rf_write_hdf5.py  test_digital_rf_realtime_2.py
digital_rf/releases/Release_1.1.2/tools/: digital_rf_archive.py
digital_rf/releases/Release_1.1.3/: Makefile.am
digital_rf/releases/Release_1.1.3/source/: README  digital_rf_hdf5.py  regression_test_digital_rf_hdf5.py
digital_rf/releases/Release_1.1.3/source/matlab/: DigitalRFReader.m  testDigitalRFReader.m
digital_rf/releases/Release_1.1.3/testing/: benchmark_rf_read_hdf5.py  benchmark_rf_read_hdf5_small_read.py  regression_test_digital_rf_hdf5.py  test_digital_rf_realtime.py  test_millstone_data_access.py
digital_rf/releases/Release_1.1.3/tools/: digital_rf_archive.py
digital_rf/releases/Release_1.1/source/: Makefile.am  digital_rf_hdf5.py  rf_write_hdf5.c
digital_rf/releases/Release_1.1/testing/: benchmark_rf_read_hdf5.py  regression_test_digital_rf_hdf5.py  test_digital_rf_hdf5.py  test_millstone_data_access.py  test_rf_write_hdf5.c
digital_rf/trunk/: Makefile  Makefile.in  README  RELEASES  config.h  config.h.in  config.status  configure  libtool
digital_rf/trunk/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
digital_rf/trunk/source/: Makefile  Makefile.am  Makefile.in  Makefile.manual  configure.ac  digital_rf.h  example_read_digital_rf.py  example_rf_write_hdf5.c  libdigital_rf.la  rf_write_hdf5.lo  test_digital_rf_hdf5.py  test_rf_write_hdf5.c
digital_rf/trunk/source/.deps/: example_rf_write_hdf5.Po  rf_write_hdf5.Plo  test_rf_write_hdf5.Po
digital_rf/trunk/source/.libs/: libdigital_rf.la  libdigital_rf.lai  libdigital_rf.so.0.0.0
digital_rf/trunk/source/matlab/: benchmarkDigitalRFReader.m  benchmark_driver.m
digital_rf/trunk/testing/: benchmark_rf_read_hdf5_fast_init.py  hourly_subdir_rf_write_hdf5.c  test_digital_rf_hdf5.py  test_read_digital_metadata.py
gr-drf/.svn/: wc.db
gr-drf/lib/: .#digital_rf_impl.cc  dddc_impl.cc  dddc_impl.cc~  dddc_impl.h~
